selenium-node-chrome.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-node-chrome
  labels:
    name: selenium-node-chrome
spec:
  selector:
    app: selenium-node-chrome
    browser: chrome
  ports:
    - name: nodeport
      protocol: TCP
      port: 5555
      targetPort: 5555
    - name: node-port-grid
      protocol: TCP
      port: 4444
      targetPort: 4444

apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-chrome-deployment
  labels:
    app: selenium-node-chrome
    name: selenium-node-chrome
spec:
  replicas: 2
  selector:
    matchLabels:
      app: selenium-node-chrome
  template:
    metadata:
      labels:
        app: selenium-node-chrome
    spec:
      containers:
        - name: selenium-node-chrome
          image: selenium/node-chrome:3.141.59-xenon
          ports:
            - containerPort: 4444
              protocol: TCP
            - containerPort: 5555
              protocol: TCP
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: dshm
          emptyDir: { "medium": "Memory" }
